// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Confirm Dialogue 1`] = `
<dl>
  <dt>
    Raoul Wolfoni
  </dt>
  <dd>
    Faut reconnaître, c'est du brutal !
  </dd>
  <dt>
    Paul Wolfoni
  </dt>
  <dd>
    Vous avez raison, il est curieux hein ?
  </dd>
  <dt>
    Mr Fernand
  </dt>
  <dd>
    J'ai connu une polonaise qu'en prenait au petit déjeuner. Faut quand même
      admettre que c'est plutôt une boisson d'homme.
    
  </dd>
  <dt>
    Raoul Wolfoni
  </dt>
  <dd>
    Tu sais pas ce qu'il me rappelle ? C't'espèce de drôlerie qu'on buvait
      dans une petite taule de bien ho har pas tellement loin de saigon. Les
      volets rouges et la taulière, une blonde komac. Comment qu'elle s'appelait
      non de dieu ?
    
  </dd>
  <dt>
    Mr Fernand
  </dt>
  <dd>
    Lulu la nantaise.
  </dd>
</dl>
`;

exports[`Empty 1`] = `undefined`;

exports[`Multiple entries 1`] = `
<ol
  class="s-x5nEMCoiqeIy"
>
  <li
    class="s-x5nEMCoiqeIy"
  >
    <a
      class="s-x5nEMCoiqeIy"
      href="/"
    >
      home
    </a>
  </li>
   
  <li
    class="s-x5nEMCoiqeIy"
  >
    &gt;
  </li>
  
  <li
    class="s-x5nEMCoiqeIy"
  >
    <a
      class="s-x5nEMCoiqeIy"
      href="/account"
    >
      account
    </a>
  </li>
   
  <li
    class="s-x5nEMCoiqeIy"
  >
    &gt;
  </li>
  
  <li
    class="s-x5nEMCoiqeIy"
  >
    <a
      class="s-x5nEMCoiqeIy"
    >
      details
    </a>
  </li>
   
  
</ol>
`;

exports[`Single entry 1`] = `
<ol
  class="s-x5nEMCoiqeIy"
>
  <li
    class="s-x5nEMCoiqeIy"
  >
    <a
      class="s-x5nEMCoiqeIy"
    >
      home
    </a>
  </li>
   
  
</ol>
`;
